--- a/-MaratonaDevRocketseat/SNWJFColeta/package.json
+++ b/-MaratonaDevRocketseat/SNWJFColeta/package.json
@@ -7,7 +7,8 @@
     "daemon": "^1.1.0",
     "express": "^4.17.1",
     "init": "^0.1.2",
-    "nunjucks": "^3.2.1"
+    "nunjucks": "^3.2.1",
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
