Finalizando app web

--- a/-MaratonaDevRocketseat/nextlevelweek#2/.vscode/settings.json
+++ b/-MaratonaDevRocketseat/nextlevelweek#2/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
   "cSpell.words": [
+    "Redirecionando",
     "altera",
     "alterações",
     "es",
     "preencher",
-    "tsnd"
+    "tsnd",
+    "updateschedule"
   ]
 }
