--- a/-MaratonaDevRocketseat/nextlevelweek#2/mobile/package.json
+++ b/-MaratonaDevRocketseat/nextlevelweek#2/mobile/package.json
@@ -11,6 +11,8 @@
     "@expo-google-fonts/archivo": "^0.1.0",
     "@expo-google-fonts/poppins": "^0.1.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.8.0",
+    "@react-navigation/material-bottom-tabs": "^5.2.16",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "expo": "~38.0.8",
@@ -20,6 +22,7 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-paper": "^4.0.1",
     "react-native-screens": "^2.10.1",
     "react-native-web": "~0.11.7"
   },
